[tool.poetry]
name = "pytss"
version = "0.1"
description = "A Python library/CLI tool for interacting with Apple's Tatsu signing servers."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/m1stadev/pytss"
keywords = ["apple", "tss", "shsh", "ios"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities"
]
packages = [
    { include = "pytss" }
]

[tool.poetry.scripts]
pytss = "pytss.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
aiopath = "0.5.12"
remotezip = "^0.9.3"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/m1stadev/Criptam/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
